--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
                             class="fa fa-building-o "></i></span></div>
                     <div class="service_block">
 
-                        <h3 class="animated fadeInUp wow">Front-end</h3>
+                        <h3 class="animated fadeInUp wow">Social Study</h3>
                         <p class="animated fadeInDown wow">Lorem Ipsum is simply dummy text of the printing and
                             typesetting industry. </p>
                     </div>
