--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Raj Sir hanrick">Raj Sir</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title"> Private tutor </p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:Raj Sir@example.com" class="contact-link">Raj Sir@example.com</a>
+              <a href="mailto:Raj Sir@example.com" class="contact-link">rajuacharya00009@gmail.com</a>
             </div>
 
           </li>
@@ -209,17 +209,17 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            A private tutor is not just a teacher but a dedicated partner in
+            the student's education. By fostering an environment that promotes self-confidence 
+             and academic achievement, private tutors play an 
+             instrumental role in helping students reach their full potential.
+             The one-on-one attention they provide ensures that students can overcome obstacles, 
+             master difficult concepts, and succeed in their educational pursuits.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+          The tutor-student relationship is built on trust, allowing the student to feel at ease and more motivated to learn. Private tutors can also offer additional support beyond the regular school curriculum, helping students prepare for exams, develop specific skills, or tackle challenging topics. Tutors can adapt their teaching style, whether it be visual, auditory, or kinesthetic, to match the student’s preferred learning method,
+            ensuring that the content is engaging and accessible.
           </p>
         </section>
 
