--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Raj Sir" width="80">
+          <img src="https://drive.google.com/file/d/1s7Xn9vUAVMwCNdQtApU7tN4louZcP8k0/preview" alt="Raj Sir" width="80">
         </figure>
 
         <div class="info-content">
