--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acharya Private Tuition</title>
     <style>
+        /* General Styles */
         body {
             font-family: Arial, sans-serif;
             background: linear-gradient(135deg, #e0f7fa, #b2ebf2);
@@ -39,6 +40,11 @@
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
 
+        .navbar a.active {
+            background-color: #004d40;
+            border-bottom: 3px solid #26A69A;
+        }
+
         .container {
             padding: 20px;
             width: 100%;
@@ -61,6 +67,12 @@
             display: none;
             opacity: 0;
             transition: opacity 0.5s ease, transform 0.5s ease;
+        }
+
+        .show {
+            display: block !important;
+            opacity: 1 !important;
+            transform: translateY(0);
         }
 
         .subjects {
@@ -87,6 +99,12 @@
         .subjects a:hover {
             transform: scale(1.1);
             box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        .subjects a.active {
+            background: linear-gradient(135deg, #388E3C, #66BB6A);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transform: scale(1.05);
         }
 
         .chapters {
@@ -117,6 +135,12 @@
             box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
         }
 
+        .chapters a::before {
+            content: '📖';
+            margin-right: 8px;
+            font-size: 1.2em;
+        }
+
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(20px); }
             to { opacity: 1; transform: translateY(0); }
@@ -138,116 +162,88 @@
                 padding: 12px;
             }
         }
-
-        /* JavaScript fade-in display style for sections */
-        .show {
-            display: block !important;
-            opacity: 1 !important;
-            transform: translateY(0);
-        }
     </style>
     <script>
-        function showSection(sectionId) {
+        function showSection(sectionId, navbarLink) {
             document.querySelectorAll('.section').forEach(section => section.classList.remove('show'));
             document.getElementById(sectionId).classList.add('show');
-            document.querySelectorAll('.chapters').forEach(chapter => chapter.style.display = 'none'); // Hide all chapters
+            document.querySelectorAll('.navbar a').forEach(link => link.classList.remove('active'));
+            navbarLink.classList.add('active');
+            document.querySelectorAll('.chapters').forEach(chapter => chapter.style.display = 'none');
         }
 
-        function showChapters(subjectId) {
-            document.querySelectorAll('.chapters').forEach(chapter => chapter.style.display = 'none'); // Hide other chapters
-            document.getElementById(subjectId).style.display = 'flex'; // Show selected subject's chapters
+        function showChapters(subjectId, subjectLink) {
+            document.querySelectorAll('.chapters').forEach(chapter => chapter.style.display = 'none');
+            document.getElementById(subjectId).style.display = 'flex';
+            document.querySelectorAll('.subjects a').forEach(link => link.classList.remove('active'));
+            subjectLink.classList.add('active');
         }
     </script>
 </head>
 <body>
 
     <div class="navbar">
-        <a href="javascript:void(0);" onclick="showSection('home')">Home</a>
-        <a href="javascript:void(0);" onclick="showSection('notes')">Notes</a>
-        <a href="javascript:void(0);" onclick="showSection('online-test')">Online Test</a>
-        <a href="javascript:void(0);" onclick="showSection('question-paper')">Question Paper</a>
-        <a href="javascript:void(0);" onclick="showSection('review')">Review</a>
-        <a href="javascript:void(0);" onclick="showSection('contact')">Contact</a>
+        <a href="javascript:void(0);" onclick="showSection('home', this)" class="active">Home</a>
+        <a href="javascript:void(0);" onclick="showSection('notes', this)">Notes</a>
+        <a href="javascript:void(0);" onclick="showSection('online-test', this)">Online Test</a>
+        <a href="javascript:void(0);" onclick="showSection('question-paper', this)">Question Paper</a>
+        <a href="javascript:void(0);" onclick="showSection('review', this)">Review</a>
+        <a href="javascript:void(0);" onclick="showSection('contact', this)">Contact</a>
     </div>
 
     <div class="container">
-        <!-- Home Section -->
         <div id="home" class="section show">
             <h1>Acharya Private Tuition</h1>
             <p>Welcome to Acharya Private Tuition! Discover resources for History, Civics, Geography, and Biology.</p>
         </div>
 
-        <!-- Notes Section -->
         <div id="notes" class="section">
             <h2>Notes</h2>
             <div class="subjects">
-                <a href="javascript:void(0);" onclick="showChapters('history-chapters')">History</a>
-                <a href="javascript:void(0);" onclick="showChapters('civics-chapters')">Civics</a>
-                <a href="javascript:void(0);" onclick="showChapters('geography-chapters')">Geography</a>
-                <a href="javascript:void(0);" onclick="showChapters('biology-chapters')">Biology</a>
+                <a href="javascript:void(0);" onclick="showChapters('history-chapters', this)">History</a>
+                <a href="javascript:void(0);" onclick="showChapters('civics-chapters', this)">Civics</a>
+                <a href="javascript:void(0);" onclick="showChapters('geography-chapters', this)">Geography</a>
+                <a href="javascript:void(0);" onclick="showChapters('biology-chapters', this)">Biology</a>
             </div>
         </div>
 
-        <!-- Online Test Section -->
-        <div id="online-test" class="section">
-            <h2>Online Test</h2>
-            <div class="subjects">
-                <a href="javascript:void(0);" onclick="showChapters('history-chapters')">History</a>
-                <a href="javascript:void(0);" onclick="showChapters('civics-chapters')">Civics</a>
-                <a href="javascript:void(0);" onclick="showChapters('geography-chapters')">Geography</a>
-                <a href="javascript:void(0);" onclick="showChapters('biology-chapters')">Biology</a>
-            </div>
-        </div>
-
-        <!-- Question Paper Section -->
-        <div id="question-paper" class="section">
-            <h2>Question Paper</h2>
-            <div class="subjects">
-                <a href="javascript:void(0);" onclick="showChapters('history-chapters')">History</a>
-                <a href="javascript:void(0);" onclick="showChapters('civics-chapters')">Civics</a>
-                <a href="javascript:void(0);" onclick="showChapters('geography-chapters')">Geography</a>
-                <a href="javascript:void(0);" onclick="showChapters('biology-chapters')">Biology</a>
-            </div>
-        </div>
-
-        <!-- Chapter Lists for each Subject -->
         <div id="history-chapters" class="chapters">
             <h2>History - Chapters</h2>
-            <a href="https://drive.google.com/file/d/1PyQ0M3Km-uGbLGCsX20dmEzr-tlN1S-Z/preview" target="_blank"> The First World War </a>
-            <a href="https://drive.google.com/file/d/1wJfztteeRQKjL0aY5WZEGVR0IUxQQguJ/preview" target="_blank"> The Second World War</a>
-            <a href="https://drive.google.com/file/d/1Jw0FP9VrCShMKgwkroZR_ok7qmTuaqXn/preview" target="_blank"> First Phase of the Indian National Movement</a>
-            <a href="https://drive.google.com/file/d/1rhtCuLUrVmRtaiS1MbwFTzmeRVIr1cQl/preview" target="_blank"> Second Phase of the Indian National Movement</a>
+            <a href="#">The First World War</a>
+            <a href="#">The Second World War</a>
+            <a href="#">First Phase of Indian National Movement</a>
+            <a href="#">Second Phase of Indian National Movement</a>
         </div>
 
         <div id="civics-chapters" class="chapters">
             <h2>Civics - Chapters</h2>
-            <a href="path/to/civics-chapter1.pdf" target="_blank">Chapter 1</a>
-            <a href="path/to/civics-chapter2.pdf" target="_blank">Chapter 2</a>
+            <a href="#">Chapter 1</a>
+            <a href="#">Chapter 2</a>
         </div>
 
         <div id="geography-chapters" class="chapters">
             <h2>Geography - Chapters</h2>
-            <a href="path/to/geography-chapter1.pdf" target="_blank">Chapter 1</a>
-            <a href="path/to/geography-chapter2.pdf" target="_blank">Chapter 2</a>
+            <a href="#">Chapter 1</a>
+            <a href="#">Chapter 2</a>
         </div>
 
         <div id="biology-chapters" class="chapters">
             <h2>Biology - Chapters</h2>
-            <a href="path/to/biology-chapter1.pdf" target="_blank">Chapter 1</a>
-            <a href="path/to/biology-chapter2.pdf" target="_blank">Chapter 2</a>
+            <a href="#">Chapter 1</a>
+            <a href="#">Chapter 2</a>
         </div>
 
-        <!-- Review Section -->
         <div id="review" class="section">
             <h2>Review</h2>
             <p>Share your feedback and experience with us!</p>
         </div>
 
-        <!-- Contact Section -->
         <div id="contact" class="section">
             <h2>Contact Us</h2>
             <p>Email: rajuacharya00009@gmail.com</p>
+            <p>Phone: +91 98765 43210</p>
         </div>
     </div>
+
 </body>
 </html>
