--- a/public/index.html
+++ b/public/index.html
@@ -240,7 +240,27 @@
         <!-- Review Section -->
         <div id="review" class="section">
             <h2>Review</h2>
-            <p>Share your feedback and experience with us!</p>
+            
+            <a href="https://g.page/r/CffLO5HQ6YimEBM/review" target="_blank" class="google-business-button">
+    Visit our Google Business Profile
+</a>
+
+<style>
+    .google-business-button {
+        display: inline-block;
+        background-color: #4285F4; /* Google blue */
+        color: white;
+        padding: 10px 20px;
+        font-size: 16px;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+    }
+    .google-business-button:hover {
+        background-color: #357AE8; /* Darker Google blue */
+    }
+</style>
+
         </div>
 
         <!-- Contact Section -->
